# wok

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  build.rs  crictl.yaml
.github/workflows/: build.yml
contrib/crictl/: container-config.json  pod-sandbox-config.json
docs/: debugging.md
examples/: README.md  haiku.txt  printer.wasm  wasi_runtime.rs
examples/helloworld-demo/: Cargo.toml
examples/helloworld-demo/src/: main.rs
examples/wasm32-wasi-demo/: Cargo.toml
examples/wasm32-wasi-demo/src/: main.rs
libwasm2oci/: Gopkg.toml  README.md  libwasm2oci.go  libwasm2oci.h
src/: lib.rs  main.rs  oci.rs  runtime.rs  util.rs  wasm.rs
src/docker/: image_reference.rs  mod.rs  reference.rs
src/reference/: mod.rs
src/runtime/: future.rs
src/server/: image.rs  mod.rs  runtime.rs
src/store/: mod.rs
src/wasm/: future.rs  mod.rs  runtime.rs  wascc.rs  wasi.rs
testdata/: echo_actor_signed.wasm  greet.wasm
