[package]
name = "wok"
version = "0.1.0"
authors = [
    "Matt Butcher <matt.butcher@microsoft.com>",
    "Matthew Fisher <matt.fisher@microsoft.com>",
]
edition = "2018"

[[bin]]
name = "wok-client"
path = "src/bin/client.rs"

[[bin]]
name = "wok-server"
path = "src/bin/server.rs"

[dependencies]
tonic = "0.1.0-beta.1"
bytes = "0.4"
prost = "0.5"
tokio = { version = "0.2", features = ["macros"] }
env_logger = "0.7.1"
log = "0.4.8"
failure = "0.1.6"

[build-dependencies]
tonic-build = "0.1.0-beta.1"
