[package]
name = "wok"
version = "0.1.0"
authors = [
    "Matt Butcher <matt.butcher@microsoft.com>",
    "Matthew Fisher <matt.fisher@microsoft.com>",
    "Radu Matei <radu.matei@microsoft.com>",
]
edition = "2018"

[dependencies]
tonic = "0.1.0-beta.1"
bytes = "0.4"
prost = "0.5"
tokio = { version = "0.2", features = ["full"] }
env_logger = "0.7.1"
log = "0.4.8"
failure = "0.1.6"
wasmtime = "0.8"
wasmtime-wasi = "0.8"
wasi-common = "0.8"
tempfile = "3.1"
futures = "0.3.1"
clap = { git = "https://github.com/clap-rs/clap", features = ["wrap_help"] }
ctrlc = "3.1"

# This is a forked version of h2 that plays nicely with gRPC by ignoring the http/2 spec.
# Specifically, the Go implementation of gRPC allows setting illegal :authority
# headers. Kubernetes does in fact send illegal headers. So we swallow the error produced
# by parsing that section, instead returning a placeholder authority.
# See:
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#testing-a-bugfix
[patch.crates-io]
h2 = { git = "https://github.com/technosophos/h2.git" }

[build-dependencies]
tonic-build = "0.1.0-beta.1"
